--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <header>
+    <a href="https://www.fylehq.com/">
     <img src="./assets/fylelogo.svg" alt="https://github.com" class="logo"> 
+    </a>
     <input type="text" placeholder="Search Github User.." class="search" (keyup)="getuser($event)">
 </header>
 
